# upiqrcode

./: .gitignore  .travis.yml  Cargo.toml  LICENSE_MIT  README.md  jsr.json  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql.yml  npm-publish.yml  publish.yml
examples/: basic-usage.js
src/: index.ts  lib.rs  test.js
