[package]
name = "upiqrcode"
version = "1.5.2"
authors = ["PRATYAY MUSTAFI <pratyaymustafi@outlook.com>"]
edition = "2026"
description = "Generate UPI QR codes as SVG — compiled to WebAssembly"
license = "Apache-2.0"
repository = "https://github.com/pratyay360/upiqrcode"
homepage = "https://github.com/pratyay360/upiqrcode"
keywords = ["upi", "qrcode", "wasm", "svg", "payment"]
categories = ["wasm", "encoding"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
qrcode = "0.14.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Controls what wasm-pack writes into the generated pkg/package.json
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
